# morfeusz2-polem-generator

./: README.md
morfeusz2_unfolded/: dict_unfold.py
morfeusz2_unfolded/trunk/: CMakeLists.txt
